--- a/sportsio/templates/admin_side/user_management.html
+++ b/sportsio/templates/admin_side/user_management.html
@@ -74,7 +74,7 @@
           </tr>
         </thead>
         <tbody id="userTableBody">
-          {% for data in users %}
+          {% for data in user %}
           <tr>
             <td>{{ data.id }}</td>
             <td>{{ data.username }}</td>
